--- a/manager/apps/main/static/main/css/style.css
+++ b/manager/apps/main/static/main/css/style.css
@@ -236,7 +236,7 @@ body {
 	transition-timing-function: ease;
 	width: 940px;		
 }
-				
+
 .nav {
 	color: rgb(51, 51, 51);
 	display: block;
@@ -258,9 +258,11 @@ body {
 	padding-right: 0px;
 	padding-top: 0px;
 	position: relative;
+	width: 477px;
 	z-index: 999;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-				
+
 #menu-item-1 {
 	color: rgb(51, 51, 51);
 	display: list-item;
@@ -274,82 +276,10 @@ body {
 	list-style-type: none;
 	text-align: left;
 	z-index: auto;
-}
-				
-#menu-item-1 a {
-	color: rgb(51, 51, 51);
-	cursor: auto;
-	display: block;
-	float: none;
-	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	height: 20px;
-	line-height: 20px;
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: none;
-	padding-bottom: 22px;
-	padding-left: 9px;
-	padding-right: 9px;
-	padding-top: 24px;
-	text-align: left;
-	text-decoration: none;
-	text-shadow: none;
-}
-				
-#menu-item-2 {
-	color: rgb(51, 51, 51);
-	display: list-item;
-	float: left;
-	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	height: 66px;
-	line-height: 20px;
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: none;
-	text-align: left;
-	z-index: auto;
-}
-				
-#menu-item-2 a {
-	color: rgb(93, 93, 93);
-	cursor: auto;
-	display: block;
-	float: none;
-	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	height: 20px;
-	line-height: 20px;
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: none;
-	padding-bottom: 22px;
-	padding-left: 9px;
-	padding-right: 9px;
-	padding-top: 24px;
-	text-align: left;
-	text-decoration: none;
-	text-shadow: none;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-#menu-item-3 {
-	color: rgb(51, 51, 51);
-	display: list-item;
-	float: left;
-	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	height: 66px;
-	line-height: 20px;
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: none;
-	position: relative;
-	text-align: left;
-	z-index: 1000;
-}
-				
-#menu-item-3 a {
+#menu-item-1 a {
 	color: rgb(93, 93, 93);
 	cursor: auto;
 	display: block;
@@ -366,11 +296,13 @@ body {
 	padding-right: 9px;
 	padding-top: 24px;
 	text-align: left;
-	text-decoration: none;
+	text-decoration: none solid rgb(93, 93, 93);
 	text-shadow: none;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-				
-#menu-item-4 {
+
+
+#menu-item-2 {
 	-webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px 0px inset;
 	background-color: rgb(237, 237, 237);
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px 0px inset;
@@ -386,9 +318,10 @@ body {
 	list-style-type: none;
 	text-align: left;
 	z-index: auto;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-#menu-item-4  a {				
+#menu-item-2  a {
 	-webkit-box-shadow: rgba(0, 0, 0, 0.121569) 0px 3px 8px 0px inset;
 	background-color: rgb(229, 229, 229);
 	box-shadow: rgba(0, 0, 0, 0.121569) 0px 3px 8px 0px inset;
@@ -408,12 +341,12 @@ body {
 	padding-right: 9px;
 	padding-top: 24px;
 	text-align: left;
-	text-decoration: none;
+	text-decoration: none solid rgb(93, 93, 93);
 	text-shadow: none;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-				
-				
-#menu-item-5 {
+
+#menu-item-3 {
 	color: rgb(51, 51, 51);
 	display: list-item;
 	float: left;
@@ -424,11 +357,13 @@ body {
 	list-style-image: none;
 	list-style-position: outside;
 	list-style-type: none;
+	position: relative;
 	text-align: left;
-	z-index: auto;
+	z-index: 1000;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-#menu-item-5  a {				
+#menu-item-3 a {
 	color: rgb(93, 93, 93);
 	cursor: auto;
 	display: block;
@@ -445,9 +380,125 @@ body {
 	padding-right: 9px;
 	padding-top: 24px;
 	text-align: left;
-	text-decoration: none;
+	text-decoration: none solid rgb(93, 93, 93);
 	text-shadow: none;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 
+#menu-item-4 {
+	color: rgb(51, 51, 51);
+	display: list-item;
+	float: left;
+	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	height: 66px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	position: relative;
+	text-align: left;
+	z-index: 1000;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+#menu-item-4 a {
+	color: rgb(93, 93, 93);
+	cursor: auto;
+	display: block;
+	float: none;
+	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	height: 20px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	padding-bottom: 22px;
+	padding-left: 9px;
+	padding-right: 9px;
+	padding-top: 24px;
+	text-align: left;
+	text-decoration: none solid rgb(93, 93, 93);
+	text-shadow: none;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+#menu-item-5 {
+	color: rgb(51, 51, 51);
+	display: list-item;
+	float: left;
+	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	height: 66px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	text-align: left;
+	z-index: auto;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+#menu-item-5  a {
+	color: rgb(93, 93, 93);
+	cursor: auto;
+	display: block;
+	float: none;
+	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	height: 20px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	padding-bottom: 22px;
+	padding-left: 9px;
+	padding-right: 9px;
+	padding-top: 24px;
+	text-align: left;
+	text-decoration: none solid rgb(93, 93, 93);
+	text-shadow: none;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+#menu-item-6 {
+	color: rgb(51, 51, 51);
+	display: list-item;
+	float: left;
+	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	height: 66px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	position: relative;
+	text-align: left;
+	z-index: 1000;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+#menu-item-6  a {
+	color: rgb(85, 85, 85);
+	cursor: auto;
+	display: block;
+	float: none;
+	font-family: OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	height: 20px;
+	line-height: 20px;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	padding-bottom: 22px;
+	padding-left: 9px;
+	padding-right: 9px;
+	padding-top: 24px;
+	text-align: left;
+	text-decoration: none solid rgb(85, 85, 85);
+	text-shadow: none;
+	font-family:OpenSans, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .okf-footer {
