--- a/manager/templates/_okfn-header.jade
+++ b/manager/templates/_okfn-header.jade
@@ -20,15 +20,18 @@ div.okfn-top
             li(id="menu-item-1")  
               a(href="http://product.okfn.org/")
                 | Home
-            li(id="menu-item-5")
-              a(href="http://product.okfn.org/advisory-board/")
-                | Advisory Board
             li(id="menu-item-2")
+              a(title="POD Product Open Data", href="http://www.product-open-data.com")
+                | Browse Data
+            li(id="menu-item-3")
+              a(href="http://product.okfn.org/advisory-board/")
+                | Community
+            li(id="menu-item-4")
+              a(href="http://product.okfn.org/bsin/")
+                | Projects
+            li(id="menu-item-5")
               a(href="http://product.okfn.org/blog/")
                 | Blog
-            li(id="menu-item-3")
+            li(id="menu-item-6")
               a(href="http://product.okfn.org/barcode-gs1/")
                 | Resources
-            li(id="menu-item-4")
-              a(title="POD &#8211; Product Open Data", href="http://www.product-open-data.com")
-                | Browse Data
