--- a/manager/apps/main/templates/main/home.jade
+++ b/manager/apps/main/templates/main/home.jade
@@ -2,26 +2,26 @@
 
 block content
 
-  h1 Welcome to the 
-    b Brand Repository 
-    | of the 
-    b Open Knowledge Foundation
-  
-  p
-    b Open Knowledge Foundation creates BSIN 
-    | (Brand Standard Identifier Number) to assign to each brand an unique worldwide identifier.
+  div(style="padding-left:50px;padding-right:50px;")
 
-  p The first objective of BSIN is to separate the brand and product management which are 2 differents concepts. Brand can be used without products and the inverse isn’t true, that’s why this brand repository exists.
+    h1 Welcome to the 
+      b Brand Repository 
+      | of the 
+      b Open Knowledge Foundation
+    
+    
+    p Recognising the need for a unique and standard identifier for brands, we have developed this brand repository and brand manager.
 
-  p BSIN is a code of 6 alphanumeric characters. The stability and reliability of this code are the roots of the projects. As a Master Data repository, the data quality is the heart of the project and all movement are traced, justified and multichecked by several moderators (or administrators for the most unsafe operations. Even deletion are logical and explained).
+    p In order to link products to their brand, we needed to develop a standard and unique identifier for brands. The 
+      b BSIN code (Brand Standard Identifier Number)
+      | , a code comprised of 6 alphanumeric characters unique to individual brands, serves this purpose. In developing the brand repository and brand manager, our primary concern has been ensuring the accuracy and reliability of our database. There are a number of checks in place to ensure that our database is completely stable and can easily be integrated in web applications and platforms.
 
-  p As a worldwide repository, OKFN brand repository has the mission to propagate these master data and several types of data flows are (or will be) available for that: from the dump, to the daily synchronization data flow or API to have a real time specific information.
+    p The Open Product Data brand repository is an open database, available under the MIT licence, and can be downloaded in bulk or accessed via our API. We believe in interoperability and want our users to be able to use our data in connection with existing source of information such as OpenCorporates, Wikipedia and the Open Product Database.
 
-  p The connexion with existing source of information is also a very important axis of development. For example, we propose linked to wikipedia to have more information about a brand or brand owner or to get high quality logos. 
-
-  p This repository is managed by organizations using brands and for which the management  of a brand repository is not the heart of these job or at least, not their added value.
-
-  p If you want to participate to expansion of the repository, you can propose a brand on the public form of the website. We would be also very happy to welcome you as a moderator of the repository if you use BSIN code in your applications.
-
-  p Do not hesitate to contact the administrator team at the following address : ???
-
+    p If you want to participate in the expansion of the repository, you can propose a brand on the website or become a database moderator. To find our more or get involved in the project join the 
+      a(href="https://lists.okfn.org/mailman/listinfo/product",target="_blank",rel="nofollow") Open Product Data Mailing List
+      | , contribute on 
+      a(href="https://github.com/okfn/brand-manager",target="_blank",rel="nofollow") Github 
+      | or emails 
+      a(href="mailto:getinvolved@okfn.org",target="_blank",rel="nofollow") getinvolved@okfn.org
+      |.
