--- a/manager/templates/__base.jade
+++ b/manager/templates/__base.jade
@@ -1,27 +1,28 @@
-!!! 5
-html(lang="en")
-  head
-    - include '_header.jade'
-    block style
+- spaceless
+  !!! 5
+  html(lang="en")
+    head
+      - include '_header.jade'
+      block style
 
-  body
-    - include '_okfn-header.jade'
-  
-    #main-wrap
-      #sidebar
-        - include '_sidebar.jade'
-      #content
-        block content
+    body
+      - include '_okfn-header.jade'
+    
+      #main-wrap
+        #sidebar
+          - include '_sidebar.jade'
+        #content
+          block content
 
-    block scripts
+      - include '_okfn-footer.jade'
 
-    scripts
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      block scripts
 
-      ga('create', 'UA-46654504-1', 'okfn.org');
-      ga('send', 'pageview');
+      script(type='text/javascript')
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    - include '_okfn-footer.jade'
+        ga('create', 'UA-46654504-1', 'okfn.org');
+        ga('send', 'pageview');
