W3C validation for homepage.

--- a/manager/templates/_okfn-header.jade
+++ b/manager/templates/_okfn-header.jade
@@ -10,9 +10,9 @@ div.okfn-top
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        
+
         a.brand(title="Home", href="http://product.okfn.org")
-          img(src="{{ STATIC_URL }}main/images/pod-logo.png", alt="logo")
+          img(src="{{ STATIC_URL }}main/images/pod-logo.png", alt="OKFN POD logo")
           | Open Product Data
 
         nav.nav-collapse
