--- a/manager/templates/_sidebar.jade
+++ b/manager/templates/_sidebar.jade
@@ -1,4 +1,4 @@
-img(src='{{ STATIC_URL }}main/images/brand_logo_200.png',style='padding:0px;margin-bottom:10px;')
+img(src='{{ STATIC_URL }}main/images/brand_logo_200.png',style='padding:0px;margin-bottom:10px;', alt='OKFN Band Repository logo')
 
 #cssmenu
   ul
