--- a/manager/apps/brand/templates/brand/brandlist.jade
+++ b/manager/apps/brand/templates/brand/brandlist.jade
@@ -28,10 +28,11 @@ block content
   #tab-listing
     table
       thead
-        tr: th Logo
-            th BSIN
-            th Brand Name
-            th Website
+        tr
+          th Logo
+          th BSIN
+          th Brand Name
+          th Website
       tbody
         for brand in brands
           tr
